--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="app"></div>
   <script src="bundle.js"></script>
+  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAf4Mt8-e0kvAmoKL0AhWabE3JaOBDTVAs&callback=initMap'></script>
 </body>
 
 </html>
